fix body overflow

--- a/web/src/global.css
+++ b/web/src/global.css
@@ -10,6 +10,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-overflow-scrolling: touch;
   font-size: 16px;
+  overflow-x: hidden;
 }
 
 main {
